# afuOS

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  conversations.rs  db.rs  llm.rs  logs.rs  main.rs  mcp.rs  memory.rs  permissions.rs  skills.rs  system.rs  voice.rs
