[package]
name = "afuos"
version = "0.1.0"
description = "A voice-first desktop butler for everyday macOS tasks."
authors = ["whitelonng"]
edition = "2021"

[[bin]]
name = "afuos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
